# WorldEngine_takehome

./: .gitignore  README.md  pyproject.toml  setup.py
scripts/: env_robot.py  run_block_pickup.py  teacher_config.py  train.py
we_sim/assets/piper_xml/: dual_piper.xml  dual_piper_block_pickup_scene.xml  dual_piper_no_gripper.xml  dual_piper_table_scene.xml  dual_piper_table_scene_no_gripper.xml  piper.urdf
we_sim/assets/piper_xml/meshes/: base_link.mtl  extrusion_1152_400.stl  link1.mtl  link2.mtl  link3.mtl  link4.mtl  link5.mtl  link6.mtl  link8.mtl  piper_arm_base.stl  piper_arm_base_scaled.stl  piper_camera_mount.stl  piper_camera_mount_scaled.stl  tabletop_scaled.mtl
we_sim/envs/: __init__.py  base_env.py
we_sim/envs/mjx_envs/: dual_piper_block_pickup_env.py
we_sim/utils/: __init__.py  async_util.py  common.py
